# hci-project

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 21b86bb8cc1f_init.py  5c608340af5d_add_content_tags_table.py  5fe2a39366a2_add_is_admin_field_to_users.py  88adc34ab6b3_remember_me.py  8fdf2d1d3642_new_models_content_and_contenttype.py  b72dcdb88ff2_users_add_phone_nullable.py  c0fbb44bb5cf_users_add_phone_nullable.py  dc5657b362f0_add_all_content_and_reference_models.py  ee34c87de85b_remove_tags_field_make_view_count_.py
backend/src/app/: __init__.py  base.py  import_models.py  main.py  schemas.py
backend/src/app/auth/: repo.py  schemas.py
backend/src/app/auth/services/: login.py  registration.py
backend/src/app/content/: models.py  repo.py  schemas.py
backend/src/app/content/models/: __init__.py  base.py  content.py
backend/src/app/content/schemas/: __init__.py  base.py  content.py
backend/src/app/content/services/: __init__.py  anime_service.py  article_service.py  book_service.py  content_types.py  content_types_service.py  course_service.py  film_service.py  game_service.py  podcast_service.py  series_service.py  tags.py  tags_service.py  video_service.py
backend/src/app/core/: config.py  db.py  deps.py  security.py
backend/src/app/references/: models.py  schemas.py
backend/src/app/references/services/: __init__.py  age_rating_service.py  author_service.py  content_category_service.py  content_status_service.py  content_types_service.py  country_service.py  difficulty_level_service.py  tags_service.py  (+3 more)
backend/src/app/users/: models.py  repo.py  schemas.py
backend/src/hci_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+76 files in other folders)
