[project]
name = "hci-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.116.2",
    "mypy>=1.18.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
    "types-python-jose>=3.5.0.20250531",
    "uvicorn>=0.35.0",
]
[tool.ruff]
target-version = "py312"
line-length = 128
src = ["src"]
show-fixes = true
exclude = [".venv", ".mypy_cache", "__pycache__", "uv.lock", "alembic"]
ignore = [
    "B008",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "ARG", # flake8-unused-arguments
  "RET", # flake8-return
  "SIM", # flake8-simplify
]

[mypy]
python_version = 3.12
mypy_path = "src"
explicit_package_bases = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["app"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disable_error_code = ["annotation-unchecked"]

plugins = ["pydantic.mypy"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.13.1",
    "types-passlib>=1.7.7.20250602",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]

[tool.ruff.format]
quote-style = "single"

